object/complexcls1/output.txt
complexcls1$ g++ 18.9.complexCls.cpp 
18.9.complexCls.cpp: In function ‘int main()’:
18.9.complexCls.cpp:99:14: error: lvalue required as left operand of assignment
   99 |       a[0] = 8;
      |              ^
complexcls1$ 
